2010-03-12 Thunor <thunorsif_at_hotmail.com>
* Reworked the control remapping feature. Now a device can be
  remapped to any other device including a virtual cursor device, and
  be tied to a particular component such as the load selector.
* Added joystick support throughout. Joystick controls are currently
  hardcoded control remappings awaiting transferral to an rcfile.

2010-03-09 Thunor <thunorsif_at_hotmail.com>
* Appended z81's Makefile and docs with .z81 and added new files for
  our use since now sz81 is the main target.
* Reorganised some newly added files.
* Added a new sz81 specific Makefile and an AUTHORS file.

2010-03-08 Thunor <thunorsif_at_hotmail.com>
* Version 2.1-4 released
* An SDL timer now manages timing if sound isn't being enabled from the
  command line or OSS_SOUND_SUPPORT is not enabled within the Makefile.

2010-03-05 Thunor <thunorsif_at_hotmail.com>
* Added some additional controls and reorganised them all.
* Shifted the ZX80 screen leftwards 2 chars since it causes problems
  with portrait orientated screens (is that a bug?).

2010-03-03 Thunor <thunorsif_at_hotmail.com>
* Added a control bar with several useful options that appear alongside
  the virtual keyboard.
* Added three Sinclair fonts, two for the control bar and the ZX
  Spectrum's for future use within the GUI.

2010-02-28 Chris Young <cdyoung_at_unsatisfactorysoftware.co.uk>
* Added code for the AmigaOS4 build.

2010-02-27 Thunor <thunorsif_at_hotmail.com>
* Version 2.1-3 released
* Added virtual keyboard opacity adustment and autohide on newline;
  both currently modifiable via keyboard controls.

2010-02-25 Thunor <thunorsif_at_hotmail.com>
* Hotspots now animate when pressed.

2010-02-23 Thunor <thunorsif_at_hotmail.com>
* Hotspot engine for the mouse/stylus is now fully functional (although
  awaiting semi-opaque highlights) and SHIFT can be sticky or a toggle
  (a future runtime modifiable option).

2010-02-18 Thunor <thunorsif_at_hotmail.com>